--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "@prisma/client": "^6.7.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "graphql": "^16.11.0",
@@ -17,10 +18,11 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
+    "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
   "resolutions": {
-  "@types/express": "^4.17.21"
-}
+    "@types/express": "^4.17.21"
+  }
 }
