updated prisma configurations

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,10 @@ RUN npm install
 
 COPY . .
 
+# ✅ Run Prisma Generate after code is copied and .env is accessible
+RUN npx prisma generate
+
+# Build TypeScript
 RUN npm run build
 
 CMD ["npm", "start"]
