--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "graphql": "^16.11.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.11.17",
     "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
