--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
@@ -19,7 +20,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.17.41",
     "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
