--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,23 @@ services:
       - "4000:4000"
     depends_on:
       - postgres
+    volumes:
+      - ./backend:/app
+    working_dir: /app
+    command: npx ts-node-dev --respawn src/index.ts
     environment:
       - DATABASE_URL=postgres://ecommerce:secret@postgres:5432/ecommerce
 
   frontend:
     build:
       context: ./frontend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules    # preventing host node_modules cover the one in Docker
     ports:
       - "3000:3000"
+      
+    working_dir: /app
+    command: npm run dev
     depends_on:
       - backend
